<resources>
    <string name="app_name">RunningApp</string>
    <string name="title_home">Home</string>
    <string name="title_activity">Activity</string>
    <string name="title_profile">Profile</string>
    <string name="navigation_drawer_open">Open navigation drawer</string>
    <string name="navigation_drawer_close">Close navigation drawer</string>
    <string name="nav_header_title">Android Studio</string>
    <string name="nav_header_subtitle">running.app@metropolia.fi</string>
    <string name="nav_header_desc">Running App</string>

    <string name="menu_activity">Activity</string>
    <string name="menu_heartrate">HeartRate</string>
    <string name="menu_bmi">BMI</string>
    <string name="menu_help">Help</string>
    <string name="menu_history">History</string>
    <string name="menu_profile">Profile</string>
    <string name="menu_editprofile">EditProfile</string>
    <string name="menu_home">Home</string>
    <string name="menu_exit">Exit</string>
    <string name="go2activity">Go2Activity</string>
    <string name="go2heartrate">Go2HeartRate</string>
    <string name="setting">Setting</string>


    <!-- Layout for MapTypes -->
    <string name="traffic">Traffic</string>
    <string name="my_location">My Location</string>
    <string name="buildings">Buildings</string>
    <string name="indoor">Indoor</string>

    <string name="none_map">None</string>
    <string name="hybrid">Hybrid</string>
    <string name="satellite">Satellite</string>
    <string name="terrain">Terrain</string>
    <string name="normal">Normal</string>
    <string-array name="layers_array">
        <item>@string/normal</item>
        <item>@string/hybrid</item>
        <item>@string/satellite</item>
        <item>@string/terrain</item>
        <item>@string/none_map</item>
    </string-array>

    <string name="layers_demo_label">Layers</string>
    <string name="layers_demo_description">Demonstrates the different map layers.</string>
    <string name="ok">OK</string>
    <string name="distance">DISTANCE(KM)</string>

    <string name="avg_speed">AVG.SPEED(KM/HR)</string>

    <string name="speed">SPEED(KM/HR)</string>

    <string name="duration">DURATION</string>
    <string name="calories">CALORIE</string>
    <string name="notification_title">Running</string>


    <string name="zero_dot">0.00</string>
    <string name="zero_colon">0:00</string>
    <string name="zero">0</string>
    <string name="placeholder4HelpActivity">This is help Activity</string>
    <string name="placeholder4EditProfileActivity">This is EditProfile Activity</string>


    <!-- Last Training details -->
    <string name="summary">Summary</string>
    <string name="status">Status</string>
    <string name="time">Time</string>
    <string name="pace">Avg. pace</string>
    <string name="water">Water intake</string>
    <string name="status_hint">How did your training go?</string>


    <!-- data collect -->
    <string name="first_name">Firstname</string>
    <string name="last_name">Lastname</string>

    <string name="height">Height</string>
    <string name="gender">Gender</string>
    <string name="weight">Weight</string>
    <string name="data_collect_save">Save</string>

    <string name="preference_key" templateMergeStrategy="preserve">
        com.example.runningapp.PREFERENCE_KEY</string>

    <string name="timer_state" templateMergeStrategy="preserve">
        com.example.runningapp.timerstate
    </string>
    <string name="preference_first_launch" templateMergeStrategy="preserve" >
        com.example.runningapp.firstlaunch
    </string>

    <string name="preference_first_name" templateMergeStrategy="preserve" >
        com.example.runningapp.firstname
    </string>

    <string name="preference_last_name" templateMergeStrategy="preserve" >
        com.example.runningapp.lastname
    </string>

    <string name="preference_weight" templateMergeStrategy="preserve" >
        com.example.runningapp.weight
    </string>

    <string name="preference_height" templateMergeStrategy="preserve" >
         com.example.runningapp.height
    </string>

    <string name="preference_gender" templateMergeStrategy="preserve" >
         com.example.runningapp.gender
    </string>

    <string name="validation_error">Incorrectly filled fields</string>
    <string name="launch_title">Hello, new user</string>
    <string name="launch_message">Before you start using RunningApp, I strongly advise you to set up
        your profile data, to make app\'s measurements more accurate</string>
    <string name="calorieburn">Calorieburn</string>
    <string name="achievement">achievement</string>
    <string name="runningicon">runningicon</string>

    <string-array name="genders_array">
        <item>Male</item>
        <item>Female</item>
    </string-array>


    <!-- Recyclerview-->
    <string name="icon_content_description">Icon</string>
    <string name="confirm_delete">Are you sure you want to delete this workout?</string>
    <string name="positive_delete">Delete</string>
    <string name="negative_delete">Cancel</string>

    <!-- MainActivity -->
    <string name="confirm_exit">Are you sure you want to exit this Application?</string>
    <string name="positive_exit">Exit</string>
    <string name="negative_exit">Cancel</string>

    <!-- Profile_achievements -->
    <string name="best_distance">Best distance:</string>
    <string name="best_calories">Most calories burnt:</string>
    <string name="longest_time">Longest run:</string>
    <string name="workouts">Workouts</string>
    <string name="records">Records</string>
    <string name="profile_kilometers_abbv">km</string>
    <string name="profile_calories_abbv">kcal</string>
    <string name="profile_time_abbv">h</string>
    <string name="profile_description">Profile picture</string>
    <string name="profile_achievement">Personal achievement</string>
    <string name="profile_distance">DISTANCE</string>
    <string name="profile_time">TIME</string>
    <string name="name">Name</string>
    <string name="male">Male</string>
    <string name="female">Female</string>
    <string name="heart">Heart</string>
    <string name="start">Start</string>


    <!-- heartrate -->
    <string name="heartRatemsg1">Sensor loaded</string>
    <string name="heartRatemsg2">Sensor not loaded</string>
    <string name="place_finger_msg">Place your finger on the sensor.</string>
    <string name="stay_quite_n_still">Try to stay still and quiet</string>
    <string name="measuring_heartrate">Measuring</string>
    <string name="heart_beat">Heart Beat</string>
    <string name="almost_there">Almost there</string>
    <string name="complete">Complete</string>
    <string name="not_enough_data">Not enough data</string>

    <!--Setting-->

    <string name="theme">Theme</string>
    <string name="defaultTheme">Light</string>
    <string name="newThemes">theme</string>
    <string name="interfacesection">interfaceSection</string>
    <string-array name="theme_settings">
        <item>Light</item>
        <item>Dark</item>
        <item>Battery Mode</item>
        <item>Follow System</item>
    </string-array>

    <string name="interface_">Interface</string>
    <string name="select_themes_">Theme</string>
    <string name="__Settings">Settings</string>



<!-- Profile_Resolution -->

    <string name="profile_set_a_goal">Set a goal</string>

    <string name="resolution_first_part">I decide that I will run</string>
    <string name="resolution_second_part">every</string>
    <string name="profile_cancel">Cancel</string>
    <string name="profile_save">Save</string>


    <string name="preference_distance" translatable="false" templateMergeStrategy="preserve">
        com.example.runningapp.profile.distance
    </string>
    <string name="preference_time_unit" translatable="false" templateMergeStrategy="preserve">
        com.example.runningapp.profile.timeunit
    </string>

    <string name="preference_day_of_month" translatable="false" templateMergeStrategy="preserve">
        com.example.runningapp.profile.dayOfMonth
    </string>
    <string-array name="distance_units_array">
        <item>kilometers</item>
        <item>meters</item>
    </string-array>
    <string-array name="time_units_array">
        <item>week</item>
        <item>month</item>
    </string-array>

    <!-- Home fragment -->
    <string name="content_description_start_a_activity">Start a activity</string>
    <string name="home_fragment_start_a_activity">Start a Activity</string>
    <string name="home_fragment_check_heart_rate">Check Heart Rate</string>
    <string name="content_description_measure_heart_rate">Measure heart rate</string>
    <string name="home_page_complete_message">Complete</string>
    <string name="home_page_finished_message">Finished</string>
    <string name="workout_details_manifest_label">Workout Details</string>
    <string name="heartRate_manifest_label">HeartRate</string>


</resources>

