<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    tools:showIn="navigation_view">


    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_activity"
            android:icon="@drawable/ic_directions_run_black_24dp"
            android:title="@string/menu_activity" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_heartrate"
            android:icon="@drawable/heartbeat"
            android:title="@string/menu_heartrate" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_history"
            android:icon="@drawable/ic_history_black_24dp"
            android:title="@string/menu_history" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_bmi"
            android:icon="@drawable/bmi"
            android:title="@string/menu_bmi" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_help"
            android:icon="@drawable/ic_help_black_24dp"
            android:title="@string/menu_help" />
    </group>

    <group android:checkableBehavior="single">
        <item
            android:id="@+id/nav_exit"
            android:icon="@drawable/ic_cancel_black_24dp"
            android:title="@string/menu_exit" />
    </group>

</menu>


