<?xml version="1.0" encoding="utf-8"?>
<navigation xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/mobile_navigation"
    app:startDestination="@id/navigation_home">

    <fragment
        android:id="@+id/navigation_home"
        android:name="com.example.runningapp.ui.home.HomeFragment"
        android:label="@string/title_home"
        tools:layout="@layout/fragment_home" >
        <action
            android:id="@+id/action_navigation_home_to_navigation_activity"
            app:destination="@id/navigation_activity"
            app:enterAnim="@anim/nav_default_enter_anim"
            app:launchSingleTop="true" />
        <action
            android:id="@+id/action_navigation_home_to_nav_heartrate"
            app:destination="@id/navigation_heartrate"
            app:enterAnim="@anim/nav_default_enter_anim" />
    </fragment>

    <activity
        android:id="@+id/navigation_activity"
        android:name="com.example.runningapp.ui.activity.RunningTrackerActivity"
        android:label="@string/title_activity"
        tools:layout="@layout/activity_maps" />

    <activity
        android:id="@+id/navigation_heartrate"
        android:name="com.example.runningapp.ui.heartrate.HeartRateActivity"
        android:label="@string/menu_heartrate"
        tools:layout="@layout/activity_heartrate" />


    <fragment
        android:id="@+id/navigation_history"
        android:name="com.example.runningapp.ui.history.HistoryFragment"
        android:label="@string/menu_history"
        tools:layout="@layout/fragment_history" />

    <fragment
        android:id="@+id/navigation_profile"
        android:name="com.example.runningapp.ui.profile.ProfileFragment"
        android:label="@string/title_profile"
        tools:layout="@layout/fragment_profile" >
    </fragment>

    <activity
        android:id="@+id/navigation_editProfile"
        android:name="com.example.runningapp.ui.editprofile.EditProfileActivity"
        android:label="@string/menu_editprofile"
        tools:layout="@layout/activity_editprofile" />


</navigation>