<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical">

    <Chronometer
        android:id="@+id/time"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_centerHorizontal="true"
        android:focusable="false"
        android:textSize="64sp" />

    <LinearLayout
        android:id="@+id/trackedData"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_below="@id/time"
        android:layout_marginBottom="12dp"
        android:divider="@drawable/metrics_divider"
        android:gravity="center_horizontal"
        android:orientation="horizontal"
        android:showDividers="middle">

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tracked_distance"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_dot"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tracked_distance"
                android:layout_centerHorizontal="true"
                android:text="@string/distance" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/tracked_speed"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero_colon"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/tracked_speed"
                android:layout_centerHorizontal="true"
                android:text="@string/speed" />
        </RelativeLayout>

        <RelativeLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <TextView
                android:id="@+id/calories_burned"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/zero"
                android:textColor="@android:color/black"
                android:textSize="32sp" />

            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_below="@id/calories_burned"
                android:layout_centerHorizontal="true"
                android:text="@string/calories" />
        </RelativeLayout>
    </LinearLayout>

</RelativeLayout>