<?xml version="1.0" encoding="utf-8"?>
<LinearLayout
        xmlns:android="http://schemas.android.com/apk/res/android"
        xmlns:tools="http://schemas.android.com/tools"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center"
        android:background="@drawable/summary_background"
        android:padding="@dimen/activity_horizontal_margin">
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolution_first_part"
            android:minLines="2"
            android:gravity="center"/>
        <EditText
            android:id="@+id/resolution_distance"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="numberDecimal"
            android:importantForAutofill="no"
            tools:ignore="LabelFor" />
        <Spinner
            android:id="@+id/resolution_distance_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/distance_units_array"
            android:gravity="center"/>
        <TextView
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/resolution_second_part"
            android:gravity="center"/>
        <Spinner
            android:id="@+id/resolution_time_unit"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:entries="@array/time_units_array"
            android:gravity="center"/>
        <Button
            android:id="@+id/resolution_save_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_save"/>
        <Button
            android:id="@+id/resolution_cancel_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/profile_cancel"/>
    </LinearLayout>
